src/features/sense/ui/SenseViewer/Messages/Message/Message.module.scss
.wrapper {
  // border: 1px solid red;
  // display: grid;
  align-self: flex-start;
  // grid-template-areas:
  //   'avatar title date'
  //   'avatar content content'
  //   'avatar amount .';

  // grid-template-columns: 40px auto 80px;
  // gap: 12px 15px;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  max-width: 62%;

  // border: 2px solid #085c36;
  // box-shadow: 0 0 10px #085c36, 0 0 5px #085c36;

  padding: 3px 0px;

  > h6 {
    grid-area: title;
    font-size: 16px;

    a {
      text-transform: none;
    }
  }

  &.myMessage {
    // justify-self: flex-end;
    align-self: flex-end;
    // border-left: transparent;
    flex-direction: row-reverse;
  }

  &.pending {
    .timestampBlock,
    .body {
      border-color: rgba($color: yellow, $alpha: 0.5);
    }
  }
}

// .avatar {
//   width: 40px;
//   height: 40px;
//   border-radius: 50%;
//   // margin-right: 10px;

//   grid-area: avatar;
// }

.timestampBlock {
  // grid-area: date;
  // justify-self: flex-end;
  // display: flex;
  border: 2px solid #085c36;
  // box-shadow: 0 0 10px #085c36, 0 0 5px #085c36;
  // max-width: 50px;
  // border: 1px solid green;
  border-right: transparent;
  border-left: transparent;
  align-items: center;
  display: flex;
  z-index: 1;
  // align-items: center;
  min-height: 40px;
  padding: 5px;

  .tx {
    color: var(--green-light);
    margin-right: 6px;

    &.status_ {
      &pending {
        color: yellow;
      }
    }

    &:hover {
      color: var(--primary-color);
    }
  }
}

.content {
  grid-area: content;
}

.amount {
  > div {
    grid-area: amount;
  }
}

.content,
.amount {
  font-size: 14px;
}

.body {
  display: flex;
  padding: 10px;
  min-height: 100px;
  min-width: 100px;
  justify-content: center;
  flex-direction: column;
  border: 2px solid #085c36;

  color: white !important;

  gap: 10px 0;
  border-radius: 20px;
  border-left: transparent;
  cursor: pointer;
  // box-shadow: 0 0 10px #085c36, 0 0 5px #085c36;

  .myMessage & {
    border-right: transparent;
    border-left: 2px solid #085c36;
  }

  &:hover {
    opacity: 0.8;

    background-color: rgba($color: #085c36, $alpha: 0.5);
    // border-color: var(--green-light);
  }
}

